<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".EditStudent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/modifier_l_etudiant"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textColorHighlight="#84DF19"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ajouter un nouveau Etudiant" />

    <EditText
        android:id="@+id/prenom2"
        android:autofillHints=""
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:hint="@string/entrer_prenom"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nom2"
        android:layout_width="0dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/entrer_nom"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom2" />

    <EditText
        android:id="@+id/age2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/entrer_age"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="61dp"
        android:text="@string/classe"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/delete"
        app:layout_constraintStart_toStartOf="@+id/age2"
        app:layout_constraintTop_toBottomOf="@+id/age2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="103dp"
        android:outlineAmbientShadowColor="@color/white"
        android:scrollbarSize="@android:dimen/app_icon_size"
        android:textColor="#fff"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/age2"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/age2" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="203dp"
        android:text="@string/edit"
        android:textColor="@color/vert"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/edit" />



</androidx.constraintlayout.widget.ConstraintLayout>